--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 </div> 
 <section id= contenedorDeProductos class="productos">   <!--Productos -->
     <div class="row my-4 maximiza_titulo">
-      <h1 class="my-4">Nuestros productos destacados </h1>
+      <span class="numero_carrito"></span>
     </div>
   <section class="container">
   <div id="cardsProductos" class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-4 row-cols-xl-4 justify-content-center">
