--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <div class="col-md-4">
     <a class="navbar-brand d-flex justify-content-center mx-auto logopaneles" href="#"><img src="./imagenes/logardo.png" alt="Logo Paneles"></a>
   </div>
-    <div class="col-md-4">
+    <div class="col-md-4 d-grid-justifiy-content-center mx-auto">
+      <a class="contenedor-carrito" href="./carrito.html"><img class="imagen-carrito"src="./imagenes/5a385f9c87dd16.0608795915136439325565.png" alt="carrito"></a>
     </div>
   </section>
   <nav class="navbar navbar-expand-lg justify-content-center animate__animated animate__zoomIn">
